Bug 313847 - When reopening 'Edit Curve' window, point density is reset to 'all'
Summary: When reopening 'Edit Curve' window, point density is reset to 'all'
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: ui (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-24 20:18 UTC by Philipp Lewe
Modified: 2013-01-31 17:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philipp Lewe 2013-01-24 20:18:31 UTC
When a curve was set up to have points with a density (in Dialog: Edit Curve -> Appearance -> Points -> Density) and afterward the edit curve dialog is opened again, then the density setting is reset to "All". Thus although nothing was changed manually, when clicking on ok or apply, the curve appearance changes.

This is really ennoying, especially if many curves need to be changed, then every time a curve is opened, the desity setting needs to be corrected.

Reproducible: Always

Steps to Reproduce:
1. Open the "Edit Curve" dialog for an object. Go to "Appearance" section, check "Points" and select the "Density" 'Low'. 
2. Close "Edit Curve" dialog via click on "OK".
3. Reopen the "Edit Curve" dialog for an object. Watch out for the "Density" setting in the "Appearance" section (it should now have been reset to "All"). Don't change anything.
4. Click on "OK" and the curve is altered
Actual Results:  
The "Density" setting was reset to "All", although nothing was editet manually

Expected Results:  
The "Density" setting should be loaded correctly, when the "Edit Curve" dialog is loaded / created
Comment 1 Netterfield 2013-01-31 17:56:34 UTC
SVN commit 1336619 by netterfield:


Respect dialog defaults and curve properties for point density.



 M  +2 -11     curveappearance.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1336619