BUG: 313847

Respect dialog defaults and curve properties for point density.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1336619 283d02a7-25f6-0310-bc7c-ecb5cbfe19da